# qaultra-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_progressive.txt  CONTRIBUTING.md  PROGRESS_REPORT.md  README.md  README_IPC.md  TEST_STATUS_REPORT.md  debug_test.cpp  precision_debug.cpp  simple_precision_test.cpp  simple_test.cpp
.cleanup_backup/: unified_datatype.hpp
.cleanup_backup/account/: account.cpp
.github/workflows/: build.yml  cmake-multi-platform.yml
benchmarks/: CMakeLists.txt
cmake/: qaultra-config.cmake.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_STATUS_2025-10-01.md  CLEANUP_SUMMARY_2025-10-01.md  CPP_RUST_IPC_COMPARISON.md  CROSS_LANGUAGE_IPC_STATUS.md  DEPENDENCIES.md  DUAL_STACK_IPC.md  EXAMPLES.md  FINAL_SUMMARY.md  ICEORYX_IMPLEMENTATION_SUMMARY.md  ICEORYX_INTEGRATION_CPP.md  PYTHON_BINDINGS_GUIDE.md  SESSION_SUMMARY_CPP_IPC.md  TEST_CLEANUP_2025-10-01.md  unified_system_summary.md  中文指南.md
examples/: CMakeLists.txt  arrow_ipc_publisher.cpp  basic_trading.cpp  broadcast_simple_pubsub.cpp  cpp_rust_bridge_example.cpp  cross_lang_arrow_publisher.cpp  cross_lang_cpp_publisher.cpp  cross_lang_cpp_subscriber.cpp  cross_lang_publisher.cpp  python_trading.py  shared_ptr_demo  shared_ptr_demo_release  shared_ptr_optimization_demo.cpp
include/qaultra/: qaultra.hpp
include/qaultra/account/: account.hpp  account_full.hpp  batch_operations.hpp  marketpreset.hpp  order.hpp  position.hpp  qa_account.hpp  unified_account.hpp
include/qaultra/account/algo/: algo.hpp
include/qaultra/analysis/: performance.hpp  performance_analyzer.hpp
include/qaultra/arrow/: arrow_kline.hpp
include/qaultra/connector/: clickhouse_connector.hpp  database_connector.hpp  mongodb_connector.hpp  qa_connector.hpp
include/qaultra/data/: datatype.hpp  datatype_simple.hpp  kline.hpp  marketcenter.hpp  tick_broadcaster.hpp  unified_datatype.hpp
include/qaultra/engine/: backtest_engine.hpp  unified_backtest_engine.hpp
include/qaultra/ipc/: arrow_compat.hpp  broadcast_config.hpp  broadcast_hub_v1.hpp  broadcast_hub_v2.hpp  cross_lang_data.hpp  market_data_block.hpp  mock_broadcast.hpp
include/qaultra/market/: market_system.hpp  match_engine.hpp  simmarket.hpp
include/qaultra/market/matchengine/: domain.hpp  order_queues.hpp  orderbook.hpp
include/qaultra/protocol/: mifi.hpp  qifi.hpp  tifi.hpp
include/qaultra/simd/: simd_math.hpp
include/qaultra/util/: uuid_generator.hpp
python/: CMakeLists.txt  account_bindings.cpp  data_bindings.cpp  engine_bindings.cpp  market_bindings.cpp  protocol_bindings.cpp  py_marketcenter.cpp  py_tick_broadcaster.cpp  qaultra_module.cpp  qaultra_py.cpp  simd_bindings.cpp
src/account/: account.cpp  account_full.cpp  batch_operations.cpp  marketpreset.cpp  order.cpp  position.cpp  qa_account.cpp  unified_account.cpp
src/account/algo/: algo.cpp
src/analysis/: performance_analyzer.cpp
src/connector/: database_connector.cpp  mongodb_connector.cpp  qa_connector.cpp
src/data/: datatype.cpp  datatype_simple.cpp  kline.cpp  marketcenter.cpp  tick_broadcaster.cpp  unified_datatype.cpp
src/engine/: backtest_engine.cpp  backtest_engine_full.cpp  backtest_engine_simple.cpp  unified_backtest_engine.cpp
src/ipc/: broadcast_hub_v1.cpp  broadcast_hub_v2.cpp  cross_lang_data.cpp
src/market/: market_system.cpp  match_engine.cpp  simmarket.cpp
src/market/matchengine/: domain.cpp  orderbook.cpp
src/protocol/: mifi.cpp  tifi.cpp
tests/: CMakeLists.txt  benchmark_account.cpp  benchmark_main.cpp  benchmark_market.cpp  benchmark_memory.cpp  benchmark_simd.cpp  test_account.cpp  test_kline.cpp  test_order.cpp
